Revamp CV and resume data, add work_short section
Updated resume data in resume.json with new education, work, projects, publications, and skills. Added work_short section and corresponding Liquid template for concise work experience display. Improved CV and about page layouts to support work_short, enhanced project and publication rendering, and updated project markdown files for publication details. Disabled search in config and updated profile image and CV PDF.

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -60,7 +60,7 @@ layout: default
     {% if page.cv and page.cv.enabled %}
       <br>
       <br>
-      <h2>
+      <h1>
         <a
           {% if page.cv.cv_pdf contains '://' %}
             href="{{ page.cv.cv_pdf }}"
@@ -73,11 +73,12 @@ layout: default
         >
           <i class="fa-solid fa-file-pdf"></i>
         </a>         
-      </h2>
+      </h1>
       {% if page.cv.description %}
         <p>
           {{ page..cv.description }}
         </p>
+        <br>
       {% endif %}
 
       <div class="cv">
@@ -102,12 +103,12 @@ layout: default
                 </div>
               </div>
 
-            {% when 'work' %}
+            {% when 'work_short' %}
               <a class="anchor" id="{{ data[0] }}"></a>
               <div class="card mt-3 p-3">
-                <h3 class="card-title font-weight-medium">{{ data[0] | capitalize }}</h3>
+                <h3 class="card-title font-weight-medium">Work</h3>
                 <div>
-                  {% include resume/work.liquid %}
+                  {% include resume/work_short.liquid %}
                 </div>
               </div>
           {% endcase %}
