--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -3,9 +3,19 @@ layout: default
 ---
 <div class="post">
   <header class="post-header">
+    
     <h1 class="post-title">
       {{ page.title }}
-      {% if page.cv_pdf %}
+    </h1>
+
+    {% if page.description %}
+      <p class="post-description">
+        {{ page.description }}
+      </p>
+    {% endif %}
+  
+    {% if page.cv_pdf %}
+      <p class="post-description">
         <a
           {% if page.cv_pdf contains '://' %}
             href="{{ page.cv_pdf }}"
@@ -16,13 +26,12 @@ layout: default
           rel="noopener noreferrer"
           class="float-right"
         >
-          <i class="fa-solid fa-file-pdf"></i>
+          <i class="fa-solid fa-file-pdf">Click me for the pdf version of the CV!</i>
+          <br>
         </a>
-      {% endif %}
-    </h1>
-    {% if page.description %}
-      <p class="post-description">{{ page.description }}</p>
+      </p>
     {% endif %}
+
   </header>
 
   <article>
