--- a/_includes/projects.liquid
+++ b/_includes/projects.liquid
@@ -7,7 +7,7 @@
           loading="eager"
           path=project.img
           sizes = "250px"
-          alt="project thumbnail"
+          alt="Refresh to see, failed to load eagerly :("
           class="card-img-top"
         %}
       {% endif %}
