removed hardcoding and changed config.yaml
changed yaml, and removed previous hardcoding from figure.liquid

--- a/_includes/figure.liquid
+++ b/_includes/figure.liquid
@@ -73,8 +73,8 @@
       {% endif %}
       {% if include.loading %}
         loading="{{ include.loading }}"
-      {% else %}
-        loading="eager"
+      {% elsif site.lazy_loading_images %}
+        loading="lazy"
       {% endif %}
       onerror="this.onerror=null; $('.responsive-img-srcset').remove();"
     >
